# simple-cpp-plugin-test

./: CMakeLists.txt  Plugin.cpp  Plugin.hpp  PluginA.cpp  PluginA.hpp  PluginB.cpp  PluginB.hpp  PluginManager.cpp  PluginManager.hpp  README.md  main.cpp
